--- a/turing-datacollection/pom.xml
+++ b/turing-datacollection/pom.xml
@@ -7,10 +7,13 @@
         <groupId>cn.turing.firecontrol</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>turing-datacollection</artifactId>
+    <packaging>jar</packaging>
+
+
+
     <properties>
         <docker.image.prefix>turing</docker.image.prefix>
         <docker.plugin.version>0.4.13</docker.plugin.version>
@@ -190,9 +193,9 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.turing</groupId>
+            <groupId>cn.ac</groupId>
             <artifactId>turing-hardware-common</artifactId>
-            <version>1.1</version>
+            <version>3.9.0</version>
         </dependency>
     </dependencies>
     <!--依赖管理，用于管理spring-cloud的依赖，其中Camden.SR3是版本号-->
@@ -238,31 +241,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>${docker.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <dockerHost>http://192.168.0.16:2375</dockerHost>
-                    <imageName>${docker.image.prefix}/${project.build.finalName}:1.7.0.28</imageName>
-                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                </configuration>
-            </plugin>
+
         </plugins>
     </build>
 </project>
