--- a/turing-device/pom.xml
+++ b/turing-device/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>firecontrol</artifactId>
         <groupId>cn.turing.firecontrol</groupId>
-        <version>V1.7.0-RELEASE</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>turing-device</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <docker.image.prefix>turing</docker.image.prefix>
@@ -22,7 +23,7 @@
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
             <artifactId>turing-common</artifactId>
-            <version>V1.7.0-RELEASE</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
@@ -32,7 +33,7 @@
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
             <artifactId>turing-auth-client</artifactId>
-            <version>V1.7.0-RELEASE</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -301,83 +302,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>prepare-dockerfile</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/docker</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${project.basedir}/src/main/docker</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!--<plugin>-->
-                <!--<groupId>com.spotify</groupId>-->
-                <!--<artifactId>docker-maven-plugin</artifactId>-->
-                <!--<version>${docker.plugin.version}</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>build</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--&lt;!&ndash;<dockerHost>http://192.168.0.22:2375</dockerHost>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<dockerHost>http://192.168.0.133:2375</dockerHost>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<dockerHost>http://117.48.208.124:52375</dockerHost>&ndash;&gt;-->
-                  <!--&lt;!&ndash;  <dockerHost>http://125.94.34.242:52375</dockerHost>&ndash;&gt;-->
-                    <!--&lt;!&ndash;特斯联服务器&ndash;&gt;-->
-                    <!--&lt;!&ndash;<dockerHost>http://47.110.137.233:52375</dockerHost>&ndash;&gt;-->
-
-                    <!--<imageName>${docker.image.prefix}/${project.build.finalName}:1.7.0.4.3</imageName>-->
-                    <!--<dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>-->
-                    <!--<resources>-->
-                        <!--<resource>-->
-                            <!--<targetPath>/</targetPath>-->
-                            <!--<directory>${project.build.directory}</directory>-->
-                            <!--<include>${project.build.finalName}.jar</include>-->
-                        <!--</resource>-->
-                    <!--</resources>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.10</version>
-                <executions>
-                    <execution>
-                        <id>build-push-image</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <dockerfile>Dockerfile</dockerfile>
-                    <repository>${docker.registry}/turing/${project.build.finalName}</repository>
-                    <tag>${project.version}</tag>  <!--不指定tag，默认为latest-->
-                    <buildArgs>
-                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-                    </buildArgs>
-                    <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
                 </configuration>
             </plugin>
         </plugins>
