--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     image: ag/ace-center
     ports:
       - "8761:8761"
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./.docker/redis:/var/lib/redis
 
   ace-auth:
     image: ag/ace-auth
