--- a/turing-auth/turing-auth-server/src/main/resources/bootstrap.yml
+++ b/turing-auth/turing-auth-server/src/main/resources/bootstrap.yml
@@ -29,9 +29,9 @@ eureka:
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      #            defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
       # docker 部署开启,记得将IP修改为部署所在服务器的外网IP
-      defaultZone: http://host/eureka/
+#      defaultZone: http://host/eureka/
 
 
 
