--- a/turing-datahandler/pom.xml
+++ b/turing-datahandler/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
             <artifactId>turing-common</artifactId>
-            <version>V1.7.0-RELEASE</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>cn.turing.firecontrol</groupId>
             <artifactId>turing-auth-client</artifactId>
-            <version>V1.7.0-RELEASE</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -244,15 +244,30 @@
         </dependency>
 
 
-        <dependency>
-            <artifactId>turing-device</artifactId>
+        <!--<dependency>
             <groupId>cn.turing.firecontrol</groupId>
-            <version>V1.7.0-RELEASE</version>
-        </dependency>
+            <artifactId>turing-device</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>elasticsearch</artifactId>
+                    <groupId>org.elasticsearch</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
         </dependency>
 
 
