--- a/turing-datacollection/src/main/resources/bootstrap.yml
+++ b/turing-datacollection/src/main/resources/bootstrap.yml
@@ -16,12 +16,12 @@ management:
 
 eureka:
   instance:
-    #    statusPageUrlPath: /swagger-ui.html
+#    statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
     prefer-ip-address: true
-    ip-address:  ${spring.cloud.client.ipAddress}
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://${CENTER_HOST:127.0.0.1}:${CENTER_PORT:8761}/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
 
