--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,76 +1,60 @@
 version: '2.1'
 services:
   eureka:
-    image: ag/ace-center
+    image: turing-center:1.0.0
     ports:
       - "8761:8761"
-  redis:
-    image: redis
-    restart: always
+
+  config:
+    image: turing-config:1.0.0
     ports:
-      - "6379:6379"
-    volumes:
-      - ./.docker/redis:/var/lib/redis
+      - "8750:8750"
+    depends_on:
+      - eureka
+    environment:
+      - EUREKA_HOST=eureka
+      - EUREKA_PORT=8761
 
   ace-auth:
-    image: ag/ace-auth
+    image: turing-auth:1.0.0
     ports:
       - "9777:9777"
-    links:
-      - eureka
     depends_on:
       - eureka
+      - config
     environment:
       - EUREKA_HOST=eureka
       - EUREKA_PORT=8761
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - RABBIT_MQ_HOST=rabbitmq
-      - RABBIT_MQ_PORT=5672
 
-  ace-admin:
-    image: ag/ace-admin
-    ports:
-      - "9990:9990"
-    links:
-      - ace-auth
-      - eureka
-    depends_on:
-      - eureka
-      - ace-auth
-    entrypoint: ./wait-for-it.sh ace-auth:9777 -t 600 --
-    command: java -Djava.security.egd=file:/dev/./urandom -jar /app.jar
-    environment:
-      - EUREKA_HOST=eureka
-      - EUREKA_PORT=8761
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - RABBIT_MQ_HOST=rabbitmq
-      - RABBIT_MQ_PORT=5672
+#  ace-admin:
+#    image: turing-admin:1.0.5
+#    ports:
+#      - "9762:9762"
+#    links:
+#      - ace-auth
+#      - eureka
+#    depends_on:
+#      - eureka
+#      - ace-auth
+#    entrypoint: ./wait-for-it.sh ace-auth:9777 -t 60 --
+#    command: java -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+#    environment:
+#      - EUREKA_HOST=eureka
+#      - EUREKA_PORT=8761
+#      - SELF_HOST=192.168.0.180
 
-  ace-gate:
-    image: ag/ace-gate
-    ports:
-      - "8765:8765"
-    links:
-      - ace-auth
-      - eureka
-    depends_on:
-      - eureka
-      - ace-auth
-      - redis
-    entrypoint: ./wait-for-it.sh ace-auth:9777 -t 600 --
-    command: java -Djava.security.egd=file:/dev/./urandom -jar /app.jar
-    environment:
-      - EUREKA_HOST=eureka
-      - EUREKA_PORT=8761
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - RABBIT_MQ_HOST=rabbitmq
-      - RABBIT_MQ_PORT=5672
+#  ace-gate:
+#    image: turing-gate:1.0.5
+#    ports:
+#      - "8765:8765"
+#    links:
+#      - ace-auth
+#      - eureka
+#    depends_on:
+#      - eureka
+#      - ace-auth
+#    entrypoint: ./wait-for-it.sh ace-auth:9777 -t 600 --
+#    command: java -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+#    environment:
+#      - EUREKA_HOST=eureka
+#      - EUREKA_PORT=8761
