--- a/turing-auth/turing-auth-server/src/main/resources/bootstrap.yml
+++ b/turing-auth/turing-auth-server/src/main/resources/bootstrap.yml
@@ -6,15 +6,15 @@ spring:
       discovery:
         service-id: turing-config
         enabled: true
-      label: master # git 分支
+      label: ${CONFIG_LABEL:master} # git 分支
       name: auth
       profile: ${spring.profiles.active}
+      fail-fast: true
+#      uri: http://${CONFIG_HOST:127.0.0.1}:${CONFIG_PORT:8750}/eureka/
 
 management:
   security:
     enabled: false
-
-
 
 
 #测试线
@@ -25,13 +25,12 @@ eureka:
   instance:
     statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
-    # docker 部署开启,记得将IP修改为部署所在服务器的外网IP
+    prefer-ip-address: true
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-      # docker 部署开启,记得将IP修改为部署所在服务器的外网IP
-#      defaultZone: http://host/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
 
 
 
