--- a/turing-config/src/main/resources/application.yml
+++ b/turing-config/src/main/resources/application.yml
@@ -29,11 +29,10 @@ eureka:
     statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
     prefer-ip-address: true
-#    ip-address:  ${spring.cloud.client.ipAddress}
-    ip-address:  127.0.0.1
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
 
 
