--- a/turing-datahandler/src/main/resources/bootstrap.yml
+++ b/turing-datahandler/src/main/resources/bootstrap.yml
@@ -6,7 +6,8 @@ spring:
       discovery:
         service-id: ${CONFIG_SERVER:turing-config}
         enabled: true
-      label: ${CONFIG_LABEL:master} # git 分支
+#      label: ${CONFIG_LABEL:master} # git 分支
+      label: dev
       name: datahandler
       profile: ${spring.profiles.active}
 
@@ -19,8 +20,8 @@ eureka:
     #    statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
     prefer-ip-address: true
-    ip-address:  ${spring.cloud.client.ipAddress}
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://${CENTER_HOST:127.0.0.1}:${CENTER_PORT:8761}/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
