--- a/turing-gate/turing-gate-server/src/main/resources/bootstrap.yml
+++ b/turing-gate/turing-gate-server/src/main/resources/bootstrap.yml
@@ -1,12 +1,12 @@
 spring:
   profiles:
-    active: test
+    active: demo
   cloud:
     config:
       discovery:
         service-id: turing-config
         enabled: true
-      label: master  # git 分支
+      label: ${CONFIG_LABEL:master} # git 分支
       name: gate
       profile: ${spring.profiles.active}
 
@@ -24,8 +24,8 @@ eureka:
     statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
     prefer-ip-address: true
-    ip-address: ${spring.cloud.client.ipAddress}
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://${EUREKA_HOST}:${EUREKA_PORT}/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
