--- a/turing-modules/turing-admin/src/main/resources/bootstrap.yml
+++ b/turing-modules/turing-admin/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       discovery:
         service-id: turing-config
         enabled: true
-      label: master  # git 分支
+      label: ${CONFIG_LABEL:master} # git 分支
       name: admin
       profile: ${spring.profiles.active}
 
@@ -26,8 +26,8 @@ eureka:
     statusPageUrlPath: /swagger-ui.html
     healthCheckUrlPath: /health
     prefer-ip-address: true
-    ip-address:  ${spring.cloud.client.ipAddress}
+    ip-address:  ${SELF_HOST:192.168.0.180}
     leaseRenewalIntervalInSeconds: 5
   client:
     serviceUrl:
-      defaultZone: http://host:8761/eureka/
+      defaultZone: http://${EUREKA_HOST:127.0.0.1}:${EUREKA_PORT:8761}/eureka/
