--- a/turing-modules/turing-monitor/src/main/docker/Dockerfile
+++ b/turing-modules/turing-monitor/src/main/docker/Dockerfile
@@ -3,10 +3,10 @@ VOLUME /tmp
 
 ADD turing-monitor.jar app.jar
 ADD wait-for-it.sh /wait-for-it.sh
-# 修改容器时区为北京时间
-RUN apk --no-cache add tzdata  && \
-    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
-    echo "Asia/Shanghai" > /etc/timezone && \
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+RUN apk add --no-cache tzdata \
+    && ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+    && echo "Asia/Shanghai" > /etc/timezone && \
     sh -c 'touch /app.jar' && \
     bash -c 'chmod 777 /wait-for-it.sh'
 CMD exec java  -Dfile.encoding=UTF-8  -Djava.security.egd=file:/dev/./urandom -jar /app.jar
